--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = ID W25 79736571,31329408,17974032,20476393
+USERAGENT = IR UW25 79736571,31329408,17974032,20476393
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
